[package]
name = "envmgr-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive", "cargo"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
openidconnect = "3.3.0"
reqwest = "0.11.18"
tiny_http = "0.12.0"
url = "2.4.0"
